<resources>
    <string name="app_name">Weather Tiles</string>
    <string name="app_name_details">Weather Details</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="label_blue_phoenix">Blue Phoenix</string>
    <string name="about_toolbar_title">About Page</string>
    <string name="about_programmer">Created by \nCarlos A. Perez Zubizarreta</string>
    <string name="about_weather_icons">Weather Icons</string>
    <string name="about_owm_api">Open Weather Map API</string>
    <string name="about_btn_visit_api">VISIT</string>
    <string name="about_wb_api">Weatherbit API</string>
    <string name="about_more_apps">More Apps</string>
    <string name="temp_placeholder">45 \u2103</string>
    <string name="city_placeholder">Tampa</string>
    <string name="country_placeholder">US</string>
    <string name="hint_search_city">Type a city name …</string>
    <string name="city_placeholder_suggestions">Saint Petersburg</string>
    <string name="region_country_placeholder_suggestions">
        City of St. Petersburg,Russian Federation</string>
    <string name="content_description_bgAuto">Background Image</string>
    <string name="content_description_back_button">Go Back</string>
    <string name="add_button_toolbar_title">Add Tile</string>
    <string name="sort_button_toolbar_title">Sort Tiles</string>
    <string name="change_degrees_button_toolbar_title">Change Degrees</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_header_text">Weather Tiles</string>
    <string name="drawer_add_tile">Add Tile</string>
    <string name="drawer_sort">Sort Tiles</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_refresh">Refresh Tiles</string>
    <string name="drawer_share">Share The App</string>
    <string name="drawer_rate">Rate The App</string>
    <string name="drawer_leave_feedback">Leave Feedback</string>
    <string name="drawer_about">About</string>
    <string name="drawer_item_more_apps">More Apps</string>
    <string name="drawer_quote_machine">Quote Machine</string>
    <string name="drawer_app_uninstaller">App Uninstaller</string>
    <string name="drawer_stress_cpu">Stress CPU</string>
    <string name="drawer_clear_handset">Clear Handset</string>
    <string name="info_icon_description">Info Button</string>
    <string name="weather_icon_description">Weather Type</string>
    <string name="close_icon_description">Closes Tile</string>
    <string name="day_or_night_icon_description">Day or Night Icon</string>
    <string name="add_weather_description">Add Location Weather Information</string>
    <string name="drawer_header_app_icon">Application Icon</string>
    <string name="logo_bluephoenix_description">BluePhoenix Logo</string>
    <string name="divider_content_description">Divider</string>
    <string name="more_apps_content_description">More Apps</string>
    <string name="event_message_loading_adding">Adding tile. Please wait </string>
    <string name="event_message_success_adding">Completed successfully!</string>
    <plurals name="event_message_success_updating">
        <item quantity="one">Updated %1$d tile successfully!</item>
        <item quantity="other">Updated %1$d tiles successfully!</item>
    </plurals>
    <string name="event_message_already_created">The city you have chosen is already on the list!</string>
    <string name="event_message_error_creating">Adding could not be completed at this time. Please try again later.</string>
    <string name="event_message_error_updating">Updating could not be completed at this time. Please try again later.</string>
    <string name="event_message_error_general">Action failed with an unknown error.</string>
    <string name="event_message_error_search">"Error retrieving chosen city. Please try again in a few minutes."</string>
    <string name="search_city_exists">City is already on the list.</string>
    <string name="search_city_error_retrieving">Error retrieving city please try again.</string>
    <string name="sort_options_title">Sort Options</string>
    <string-array
        name="sort_options_array">
        <item>No Sort Selected</item>
        <item>Sort by Temperature  \u25B2</item>
        <item>Sort by Temperature  \u25BC</item>
        <item>Sort by Daytime</item>
        <item>Sort by Nighttime</item>
        <item>Sort Alphabetically  \u25B2</item>
        <item>Sort Alphabetically  \u25BC</item>
    </string-array>
    <string name="dialog_no_internet_title">No Internet</string>
    <string name="dialog_no_internet_body">No Internet</string>
    <string name="dialog_downloading_data_title">Please Wait</string>
    <string name="dialog_downloading_data_body">Downloading weather data …</string>
    <string name="preference_input_title">Max number of tiles</string>
    <string name="preference_summary_max_tile_number">Set the maximum number of tiles which can be added to the list. Current = %1$d, Max = %2$d.</string>
    <string name="preference_max_number_of_tiles_hint">Max : 40</string>
    <string name="toast_max_number_of_tiles_reached">"Max tile number reached. Please remove a tile before adding more."</string>
    <string name="intro_add_tile_button">Tap the add button to search for a city.</string>
    <string name="intro_change_temp_scale_button">Change the temperature from
        celsius to fahrenheit and vice-versa.</string>
    <string name="intro_hamburger_button">Tap the menu button to access more options.</string>
    <string name="wi_owm_200">&#xf01e;</string>
    <string name="wi_owm_201">&#xf01e;</string>
    <string name="wi_owm_202">&#xf01e;</string>
    <string name="wi_owm_210">&#xf016;</string>
    <string name="wi_owm_211">&#xf016;</string>
    <string name="wi_owm_212">&#xf016;</string>
    <string name="wi_owm_221">&#xf016;</string>
    <string name="wi_owm_230">&#xf01e;</string>
    <string name="wi_owm_231">&#xf01e;</string>
    <string name="wi_owm_232">&#xf01e;</string>
    <string name="wi_owm_300">&#xf01c;</string>
    <string name="wi_owm_301">&#xf01c;</string>
    <string name="wi_owm_302">&#xf019;</string>
    <string name="wi_owm_310">&#xf017;</string>
    <string name="wi_owm_311">&#xf019;</string>
    <string name="wi_owm_312">&#xf019;</string>
    <string name="wi_owm_313">&#xf01a;</string>
    <string name="wi_owm_314">&#xf019;</string>
    <string name="wi_owm_321">&#xf01c;</string>
    <string name="wi_owm_500">&#xf01c;</string>
    <string name="wi_owm_501">&#xf019;</string>
    <string name="wi_owm_502">&#xf019;</string>
    <string name="wi_owm_503">&#xf019;</string>
    <string name="wi_owm_504">&#xf019;</string>
    <string name="wi_owm_511">&#xf017;</string>
    <string name="wi_owm_520">&#xf01a;</string>
    <string name="wi_owm_521">&#xf01a;</string>
    <string name="wi_owm_522">&#xf01a;</string>
    <string name="wi_owm_531">&#xf01d;</string>
    <string name="wi_owm_600">&#xf01b;</string>
    <string name="wi_owm_601">&#xf01b;</string>
    <string name="wi_owm_602">&#xf0b5;</string>
    <string name="wi_owm_611">&#xf017;</string>
    <string name="wi_owm_612">&#xf017;</string>
    <string name="wi_owm_615">&#xf017;</string>
    <string name="wi_owm_616">&#xf017;</string>
    <string name="wi_owm_620">&#xf017;</string>
    <string name="wi_owm_621">&#xf01b;</string>
    <string name="wi_owm_622">&#xf01b;</string>
    <string name="wi_owm_701">&#xf01a;</string>
    <string name="wi_owm_711">&#xf062;</string>
    <string name="wi_owm_721">&#xf0b6;</string>
    <string name="wi_owm_731">&#xf063;</string>
    <string name="wi_owm_741">&#xf014;</string>
    <string name="wi_owm_761">&#xf063;</string>
    <string name="wi_owm_762">&#xf063;</string>
    <string name="wi_owm_771">&#xf011;</string>
    <string name="wi_owm_781">&#xf056;</string>
    <string name="wi_owm_800">&#xf00d;</string>
    <string name="wi_owm_801">&#xf011;</string>
    <string name="wi_owm_802">&#xf011;</string>
    <string name="wi_owm_803">&#xf012;</string>
    <string name="wi_owm_804">&#xf013;</string>
    <string name="wi_owm_900">&#xf056;</string>
    <string name="wi_owm_901">&#xf01d;</string>
    <string name="wi_owm_902">&#xf073;</string>
    <string name="wi_owm_903">&#xf076;</string>
    <string name="wi_owm_904">&#xf072;</string>
    <string name="wi_owm_905">&#xf021;</string>
    <string name="wi_owm_906">&#xf015;</string>
    <string name="wi_owm_957">&#xf050;</string>
    <string name="wi_owm_day_200">&#xf010;</string>
    <string name="wi_owm_day_201">&#xf010;</string>
    <string name="wi_owm_day_202">&#xf010;</string>
    <string name="wi_owm_day_210">&#xf005;</string>
    <string name="wi_owm_day_211">&#xf005;</string>
    <string name="wi_owm_day_212">&#xf005;</string>
    <string name="wi_owm_day_221">&#xf005;</string>
    <string name="wi_owm_day_230">&#xf010;</string>
    <string name="wi_owm_day_231">&#xf010;</string>
    <string name="wi_owm_day_232">&#xf010;</string>
    <string name="wi_owm_day_300">&#xf00b;</string>
    <string name="wi_owm_day_301">&#xf00b;</string>
    <string name="wi_owm_day_302">&#xf008;</string>
    <string name="wi_owm_day_310">&#xf008;</string>
    <string name="wi_owm_day_311">&#xf008;</string>
    <string name="wi_owm_day_312">&#xf008;</string>
    <string name="wi_owm_day_313">&#xf008;</string>
    <string name="wi_owm_day_314">&#xf008;</string>
    <string name="wi_owm_day_321">&#xf00b;</string>
    <string name="wi_owm_day_500">&#xf00b;</string>
    <string name="wi_owm_day_501">&#xf008;</string>
    <string name="wi_owm_day_502">&#xf008;</string>
    <string name="wi_owm_day_503">&#xf008;</string>
    <string name="wi_owm_day_504">&#xf008;</string>
    <string name="wi_owm_day_511">&#xf006;</string>
    <string name="wi_owm_day_520">&#xf009;</string>
    <string name="wi_owm_day_521">&#xf009;</string>
    <string name="wi_owm_day_522">&#xf009;</string>
    <string name="wi_owm_day_531">&#xf00e;</string>
    <string name="wi_owm_day_600">&#xf00a;</string>
    <string name="wi_owm_day_601">&#xf0b2;</string>
    <string name="wi_owm_day_602">&#xf00a;</string>
    <string name="wi_owm_day_611">&#xf006;</string>
    <string name="wi_owm_day_612">&#xf006;</string>
    <string name="wi_owm_day_615">&#xf006;</string>
    <string name="wi_owm_day_616">&#xf006;</string>
    <string name="wi_owm_day_620">&#xf006;</string>
    <string name="wi_owm_day_621">&#xf00a;</string>
    <string name="wi_owm_day_622">&#xf00a;</string>
    <string name="wi_owm_day_701">&#xf009;</string>
    <string name="wi_owm_day_711">&#xf062;</string>
    <string name="wi_owm_day_721">&#xf0b6;</string>
    <string name="wi_owm_day_731">&#xf063;</string>
    <string name="wi_owm_day_741">&#xf003;</string>
    <string name="wi_owm_day_761">&#xf063;</string>
    <string name="wi_owm_day_762">&#xf063;</string>
    <string name="wi_owm_day_771">&#xf000;</string>
    <string name="wi_owm_day_781">&#xf056;</string>
    <string name="wi_owm_day_800">&#xf00d;</string>
    <string name="wi_owm_day_801">&#xf000;</string>
    <string name="wi_owm_day_802">&#xf000;</string>
    <string name="wi_owm_day_803">&#xf000;</string>
    <string name="wi_owm_day_804">&#xf00c;</string>
    <string name="wi_owm_day_900">&#xf056;</string>
    <string name="wi_owm_day_901">&#xf00e;</string>
    <string name="wi_owm_day_902">&#xf073;</string>
    <string name="wi_owm_day_903">&#xf076;</string>
    <string name="wi_owm_day_904">&#xf072;</string>
    <string name="wi_owm_day_905">&#xf0c4;</string>
    <string name="wi_owm_day_906">&#xf004;</string>
    <string name="wi_owm_day_957">&#xf050;</string>
    <string name="wi_owm_night_200">&#xf02d;</string>
    <string name="wi_owm_night_201">&#xf02d;</string>
    <string name="wi_owm_night_202">&#xf02d;</string>
    <string name="wi_owm_night_210">&#xf025;</string>
    <string name="wi_owm_night_211">&#xf025;</string>
</resources>