<?xml version="1.0" encoding="utf-8"?>
<io.bluephoenix.weathertiles.ui.views.WeatherView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/weather_tile_background_selector"
    android:id="@+id/tileView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    custom:weatherIconContent="200"
    custom:weatherIconTextSize="@dimen/weather_view_weather_icon_text_size"
    custom:weatherIconColor="@color/colorAccent"
    custom:tempContent="@string/temp_placeholder"
    custom:tempTextSize="@dimen/weather_view_temp_text_size"
    custom:tempColor="@color/colorAccentMain"
    custom:cityContent="@string/city_placeholder"
    custom:cityTextSize="@dimen/weather_view_city_text_size"
    custom:cityColor="@color/colorAccent"
    custom:countryContent="@string/country_placeholder"
    custom:countryTextSize="@dimen/weather_view_country_text_size"
    custom:countryColor="@color/colorAccent"
    custom:spaceAfterIcon="12dp"
    custom:spaceAfterTemp="2dp"
    custom:spaceAfterCity="2dp"
    custom:spaceAfterCountry="14dp"
    custom:marginOffset="@dimen/weather_recyclerview_marin_offset_weather_view"
    custom:numberOfColumns="@integer/grid_columns"/>