<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarStyle"
        app:titleTextColor="@color/colorAccentMain"
        app:titleTextAppearance="@style/ToolbarTextAppearance"
        app:title="@string/about_toolbar_title" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollViewAboutPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoBluePhoenix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/logo_bluephoenix_description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo_bluephoenix"/>

            <ImageView
                android:id="@+id/dividerZero"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/divider_content_description"
                android:layerType="software"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoBluePhoenix"
                app:layout_constraintWidth_max="400dp"
                app:srcCompat="@drawable/about_divider"/>

            <ImageView
                android:id="@+id/bgProgrammer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description_bgAuto"
                android:minHeight="80dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerZero"
                app:layout_constraintWidth_max="400dp"
                app:srcCompat="@drawable/round_rect_shape_background"/>

            <TextView
                android:id="@+id/lblProgrammer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:lineSpacingExtra="6sp"
                android:text="@string/about_programmer"
                android:textAlignment="center"
                android:textColor="@color/colorAccentMain"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/bgProgrammer"
                app:layout_constraintLeft_toLeftOf="@+id/bgProgrammer"
                app:layout_constraintRight_toRightOf="@+id/bgProgrammer"
                app:layout_constraintTop_toTopOf="@+id/bgProgrammer"/>

            <ImageView
                android:id="@+id/bgVersion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_bgAuto"
                android:minHeight="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bgProgrammer"
                app:layout_constraintWidth_max="400dp"
                app:srcCompat="@drawable/round_rect_shape_background"/>

            <TextView
                android:id="@+id/lblVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/versionName"
                android:textAlignment="center"
                android:textColor="@color/colorAccentMain"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/bgVersion"
                app:layout_constraintLeft_toLeftOf="@+id/bgVersion"
                app:layout_constraintRight_toRightOf="@+id/bgVersion"
                app:layout_constraintTop_toTopOf="@+id/bgVersion"/>

            <ImageView
                android:id="@+id/dividerFirst"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/divider_content_description"
                android:layerType="software"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bgVersion"
                app:layout_constraintWidth_max="400dp"
                app:srcCompat="@drawable/about_divider"/>

            <ImageView
                android:id="@+id/bgWeatherIcons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description_bgAuto"
                android:minHeight="116dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerFirst"
                app:layout_constraintWidth_max="400dp"
                app:srcCompat="@drawable/round_rect_shape_background"/>

            <TextView
                android:id="@+id/lblWeatherIcons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/about_weather_icons"
                android:textAlignment="center"
                android:textColor="@color/colorAccentMain"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@+id/bgWeatherIcons"
                app:layout_constraintRight_toRightOf="@+id/bgWeatherIcons"
                app:layout_constraintTop_toTopOf="@+id/bgWeatherIcons"/>

            <Button
                android:id="@+id/btnWeatherIcons"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/about_blue_btn_background"
                android:text="@string/about_btn_visit_api"
                android:textAlignment="center"
                android:textColor="@color/colorAccentMain"
                app:layout_constraintBottom_toBottomOf="@+id/bgWeatherIcons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblWeatherIcons"
                app:layout_constraintWidth_max="100dp"/>

            <ImageView
                android:id="@+id/dividerSecond"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/divider_content_description"
                android:layerType="software"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bgWeatherIcons"
                app:layout_constraintWidth_max="400dp"
                app:srcCompat="@drawable/about_divider"/>

            <ImageView
                android:id="@+id/bgOWM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description_bgAuto"
                android:minHeight="116dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerSecond"
                app:layout_constraintWidth_max="400dp"
                app:srcCompat="@drawable/round_rect_shape_background"/>

            <TextView
                android:id="@+id/lblAPI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/about_owm_api"
                android:textAlignment="center"
                android:textColor="@color/colorAccentMain"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@+id/bgOWM"
                app:layout_constraintRight_toRightOf="@+id/bgOWM"
                app:layout_constraintTop_toTopOf="@+id/bgOWM"/>

            <Button
                android:id="@+id/btnOWM"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/about_blue_btn_background"
                android:text="@string/about_btn_visit_api"
                android:textAlignment="center"
                android:textColor="@color/colorAccentMain"
                app:layout_constraintBottom_toBottomOf="@+id/bgOWM"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblAPI"
                app:layout_constraintWidth_max="100dp"/>

            <ImageView
                android:id="@+id/dividerThird"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/divider_content_description"
                android:layerType="software"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bgOWM"
                app:layout_constraintWidth_max="400dp"
                app:srcCompat="@drawable/about_divider"/>

            <ImageView
                android:id="@+id/bgMoreApps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description_bgAuto"
                android:minHeight="110dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerThird"
                app:layout_constraintWidth_max="400dp"
                app:srcCompat="@drawable/round_rect_shape_background"/>

            <TextView
                android:id="@+id/lblMoreApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/about_more_apps"
                android:textAlignment="center"
                android:textColor="@color/colorAccentMain"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@+id/bgMoreApps"
                app:layout_constraintRight_toRightOf="@+id/bgMoreApps"
                app:layout_constraintTop_toTopOf="@+id/bgMoreApps"/>

            <ImageButton
                android:id="@+id/imgBtnQuoteMachine"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/more_apps_content_description"
                android:minWidth="10dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/bgMoreApps"
                app:layout_constraintEnd_toStartOf="@+id/imgBtnAppUninstaller"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/quote_machine"/>

            <ImageButton
                android:id="@+id/imgBtnAppUninstaller"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/more_apps_content_description"
                android:minWidth="10dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/bgMoreApps"
                app:layout_constraintEnd_toStartOf="@+id/imgBtnStressCPU"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgBtnQuoteMachine"
                app:srcCompat="@drawable/app_uninstaller"/>

            <ImageButton
                android:id="@+id/imgBtnStressCPU"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/more_apps_content_description"
                android:minWidth="10dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/bgMoreApps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgBtnAppUninstaller"
                app:srcCompat="@drawable/stress_cpu"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>